kubernetes/api/base/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: api
    spec:
      containers:
        - env:            
            - name: DB_DATABASE
              valueFrom:
                configMapKeyRef:
                  name: api
                  key: db_database
            - name: DB_DAILECT
              valueFrom:
                configMapKeyRef:
                  name: api
                  key: db_dailect
            - name: PORT
              valueFrom:
                configMapKeyRef:
                  name: api
                  key: port
            - name: DB_PORT
              valueFrom:
                configMapKeyRef:
                  name: api
                  key: db_port
            - name: DB_USERNAME
              valueFrom:
                secretKeyRef:
                  name: api
                  key: db_username
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: api
                  key: db_password
            - name: DB_HOST
              valueFrom:
                secretKeyRef:
                  name: api
                  key: db_host
            - name: ConnectionStrings__DefaultConnection
              value: Server=tcp;Database={DATABASE};Port={PORT};UID={DB_USERNAME};Password={DB_PASSWORD};
          image: matthieug76120/nodejs:1.0
          name: api
          ports:
            - containerPort: 81
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
      restartPolicy: Always
