kubernetes/api/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: api
  name: api
spec:
  ports:
    - name: "http"
      port: 81
      targetPort: 81
  selector:
    io.kompose.service: api
status:
  loadBalancer: {}
